tests/analyzer/ok/structs.api

type st1 = struct {
  a: u32,
};

type st2 = struct {
  a: u32,
  b: u32,
  c: u32,
};