tests/analyzer/fail/enum-empty.api
// expected: 1012

type f1 = enum {};
